@@ -184,7 +184,7 @@ static SEXP SetOption(SEXP tag, SEXP value)
     if (value == R_NilValue) {
 	for ( ; t != R_NilValue ; t = CDR(t))
 	    if (TAG(CDR(t)) == tag) {
-		old = CAR(t);
+		old = CAR(CDR(t));
 		SETCDR(t, CDDR(t));
 		return old;
 	    }
