@@ -2873,3 +2873,9 @@ aa ; options(op)
 d <- data.frame(a=1)
 d[integer(), "a"] <- 2
 ## warned in 3.0.3.
+
+
+## PR15781
+options(foo = 1)
+print(options(foo = NULL))
+## printed wrong value in 3.1.0
