@@ -7428,3 +7428,12 @@ Signif. codes:
 > d[integer(), "a"] <- 2
 > ## warned in 3.0.3.
 > 
+> 
+> ## PR15781
+> options(foo = 1)
+> print(options(foo = NULL))
+$foo
+[1] 1
+
+> ## printed wrong value in 3.1.0
+> 
